test/stage2/test_11810517_3.out
Error type 2 at Line 8: function "compare" is not defined.