test/stage2/test_11810517_3.spl
int compare1(int x) {
	return 1;
}

int main() {
	int a, b, c = 10;
	
	compare(3);
	return 1;
}